AG-11915 Fix z-index of floating toolbars

--- a/packages/ag-charts-community/src/chart/toolbar/toolbarStyles.css
+++ b/packages/ag-charts-community/src/chart/toolbar/toolbarStyles.css
@@ -53,6 +53,8 @@
 .ag-charts-toolbar--floating {
     padding: 0;
     width: auto;
+    /* Needs to beat .ag-crosshair-label */
+    z-index: 99999;
 }
 
 .ag-charts-toolbar--floating-top {
